--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>Coffee Love Encoded</title>
+  <title>Cafe</title>
   <link rel="stylesheet" href="./style.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Parisienne&display=swap">
 </head>
@@ -70,7 +70,7 @@
   </div>
 </div>
 
-<h1>ERES COMO EL CAFÉ<br>Por las noches no me dejas dormir, <br>y por las mañanas eres imprescindible para empezar mi día</h1>
+<h1>SOS COMO EL CAFÉ<br>Por las noches no me dejas dormir, <br>y por las mañanas sos imprescindible para empezar mi día</h1>
 </body>
 </html>
 </body>
